
PIG-2151: Add annotation to specify output schema in Java UDFs (dvryaboy)

PIG-2230: Improved error message for invalid parameter format (xuitingz via olgan)

PIG-2328: Add builtin UDFs for building and using bloom filters (gates)

PIG-2338: Need signature for EvalFunc (daijy)

PIG-2337: Provide UDF with input schema (xutingz via daijy)

OPTIMIZATIONS

BUG FIXES

PIG-3076: make TestScalarAliases more reliable (julien)

PIG-3020: "Duplicate uid in schema" error when joining two relations derived from the same load statement (jcoveney)

PIG-3044: hotfix to remove divide by 0 error (jcoveney)

PIG-3033: test-patch failed with javadoc warnings (fang fang chen via cheolsoo)

PIG-3058: Upgrade junit to at least 4.8 (fang fang chen via cheolsoo)

PIG-2978: TestLoadStoreFuncLifeCycle fails with hadoop-2.0.x (cheolsoo)

PIG-3039: Not possible to use custom version of jackson jars (rohini)

PIG-2979: Pig.jar doesn't work with hadoop-2.0.x (cheolsoo)

PIG-2405: some unit test case failed with open JDK (fang fang chen via cheolsoo)

PIG-3035: With latest version of hadoop23 pig does not return the correct exception stack trace from backend (rohini)

PIG-3018: Refactor TestScriptLanguage to remove duplication and write script in different files (julien)

PIG-2973: TestStreaming test times out (cheolsoo)

PIG-3001: TestExecutableManager.testAddJobConfToEnv fails randomly (cheolsoo)

PIG-3017: Pig's object serialization should use compression (jcoveney)

PIG-2968: ColumnMapKeyPrune fails to prune a subtree inside foreach (knoguchi via cheolsoo)

PIG-2999: Regression after PIG-2975: BinInterSedesTupleRawComparator secondary sort failing (knoguchi via azaroth)

PIG-2998: Fix TestScriptLanguage and TestMacroExpansion (cheolsoo via jcoveney)

PIG-2975: TestTypedMap.testOrderBy failing with incorrect result (knoguchi via jcoveney)

PIG-1283: COUNT on null bag causes failure (analog.sony via jcoveney)

PIG-2958: Pig tests do not appear to have a logger attached (daijyc via jcoveney)
