@@ -4575,6 +4575,27 @@ store C into ':OUTPATH:';\,
                         'rc' => 0,
                         'not_expected_out_regex' => "checkJobConf: conf is null: false",
                         'expected_out_regex' => "checkJobConf: conf is null: true",
+                    }, {
+                        # PIG-3051
+                        'num' => 5,
+                        'pig' => q?A = LOAD ':INPATH:/singlefile/votertab10k' AS (name, age, registration, contributions);
+                                -- dropping one column to force columnprune
+                                B = foreach A generate age, registration,contributions;
+                                C = order B by contributions;
+                                D = limit C 3;
+                                E = foreach D generate contributions;
+                                STORE C INTO ':OUTPATH:.1';
+                                STORE E INTO ':OUTPATH:.2';?,
+                        'verify_pig_script' => q?A = LOAD ':INPATH:/singlefile/votertab10k' AS (name, age, registration, contributions);
+                                B = foreach A generate age, registration,contributions;
+                                C = order B by contributions;
+                                STORE C INTO ':OUTPATH:.1';
+                                F = LOAD ':INPATH:/singlefile/votertab10k' AS (name, age, registration, contributions);
+                                G = foreach F generate age, registration,contributions;
+                                H = order G by contributions;
+                                I = limit H 3;
+                                J = foreach I generate contributions;
+                                STORE J INTO ':OUTPATH:.2';?,
                     }
                 ],
             },{
